@@ -15,7 +15,11 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.nio.file.Files;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/file/v1")
@@ -38,9 +42,13 @@ public class FileController implements FileControllerDocs {
         return new UploadFileResponseDTO(fileName, fileDownload, file.getContentType(), file.getSize() );
     }
 
+    @PostMapping("/uploadMultipleFile")
     @Override
-    public List<UploadFileResponseDTO> uploadMultipleFile(MultipartFile[] files) {
-        return List.of();
+    public List<UploadFileResponseDTO> uploadMultipleFile(@RequestParam("files") MultipartFile[] files) {
+        return Arrays.asList(files)
+                .stream()
+                .map(file -> uploadFile(file))
+                .collect(Collectors.toList());
     }
 
     @Override
